Add control for empty fields in category and task forms.

--- a/frontend/src/app/components/categories/categories-form/categories-form.component.html
+++ b/frontend/src/app/components/categories/categories-form/categories-form.component.html
@@ -5,7 +5,7 @@
 
 <div class="modal-body">
   <label>Name:
-    <input [(ngModel)]="category.name" name="name" class="form-control" placeholder="Enter task name"/>
+    <input [(ngModel)]="category.name" name="name" class="form-control" placeholder="Enter category name"/>
   </label>
 </div>
 
